assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bayon&display=swap');

body {
  background-color: rgb(81, 13, 145);
  background-image: url(/assets/images/background-image-needles.jpg);
  background-size: no-repeat; 

}
/*Styling for the title header */

#main-page-header {
  text-align: center;
  font-family: 'Bungee Spice', cursive;
  font-size: 30px;
  border: 4px solid #db2323;
  border-style: double;

}

/* Styling for the Main Navigation Bar across site */

.main-nav {
  margin: 0;
  padding: 0;
  display: flex; 
  justify-content: center; 
  align-items: center;
  height: 10vh; 
  background-color: rgb(81, 13, 145); 
  font-size: 50px;
  font-family: 'Passion One', cursive;

}

.main-nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex; 
}

.main-nav li {
  margin-right: 20px; 
}

.main-nav a {
  display: block;
  color: #fcfcfc;
  text-decoration: none;
  padding: 10px; 
}

.main-nav a:hover {
  background-color:rgb(223, 53, 15)
}

/* Styling for the Homepage image and text boxes */


.container {
  font-size: 50px;
  font-family: 'Passion One', cursive ;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
  padding: 10px;
}

.box {
  flex-basis: calc(50% - 20px);
  margin-bottom: 20px;
  background-color: #f8f8f8;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

img {
  max-width: 100%;
  height: auto;
  border-radius: 8px;
  margin-bottom: 10px;
}

p {
  
  line-height: 1.6;
}

/* STYLING FOR THE MEDITATION PAGE TIMER*/

.timer-container {
  text-align: center;
  font-family: 'Passion One', cursive ;
}

.timer-display {
  font-size: 48px;
  font-family: 'Passion One', cursive;
  color: #007bff; 
  margin-bottom: 20px;
}

.timer-container button {
  font-size: 30px;
  font-family: 'Passion One', cursive;
  padding: 10px 20px;
  margin: 5px;
  background-color: #0e0ed4; 
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.timer-container button:hover {
  background-color: #0056b3; 
}

/* Styling for the timer messages */
.message {
  background-image: url(/assets/images/stones-water.jpeg);
  font-size: 60px;
  font-family: 'Bayon', sans-serif;
  text-align: center;
  margin: 20px 0;
  color: #333;
  font-weight: bold;
}

/*STYLING FOR MEDITATION PAGE*/

.meditation-paragraph {
  font-family: 'Passion One', cursive;
  font-size: 30px;
  padding-top: 5%;
  padding-left: 3%;
  padding-right: 3%;
  text-align: center;
}

/*STYLING FOR THE CONTACTS PAGE------------*/

#map {
  width: 40%;
  height: 420px;
  background-color: rgb(69, 29, 201);
  margin: 0 auto; /* Center horizontally */
  display: flex;
  justify-content: center; /* Center vertically */
  align-items: center; /* Center vertically */
  padding: 10px; /* Add padding around the map container */
}



/* styles for contact form */

.contact-form-container {
  font-family: 'Passion One', cursive;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 25px;
}

.contact-page-form {
  float: left;
  width: 50%;
  justify-content: center;
  padding: 10px; /* Reduce padding for the form container */
  background-color: #f0f0f0;
}

.contact-page-form h2 {
  font-size: 24px;
  margin-bottom: 10px; /* Adjust margin for the heading */
}

.contact-page-form form label {
  display: block;
  margin-bottom: 5px; /* Adjust margin for labels */
}

.contact-page-form form input,
.contact-page-form form textarea {
  width: 100%; /* Adjust input and textarea width */
  padding: 8px; /* Adjust padding */
  margin-bottom: 15px; /* Adjust margin */
}

.contact-page-form form button {
  background-color: #007BFF;
  color: #fff;
  padding: 10px 5px;
  border: none;
  cursor: pointer;
  font-size: 16px;
}

.contact-page-form form button:hover {
  background-color: #0056b3;
}

/* Hover effect styles */
.btn-hover-effect {
  background-color: #007BFF;
  color: #fff;
  transition: background-color 0.3s ease-in-out;
}

.btn-hover-effect:hover {
  background-color: #0056b3;
}

/* Show contact form button styles */

#show-contact-form {
  display: block;
  margin: 0 auto; /* Center horizontally */
  font-family: 'Passion One', cursive;
  font-size: 24px; /* Increase font size */
  background-color: #5297e1;
  color: #fff;
  padding: 15px 30px; /* Increase padding for a larger button */
  border: none;
  border-radius: 8px;
  cursor: pointer;
  opacity: 0.8;
}

#show-contact-form:hover {
  background-color: #0e78e9;
  opacity: 3; 
}

/* STYLING FOR THE CONTACT PAGE INFORMATION */

#contact-us-information {
  font-family: 'Passion One', cursive ;
  font-size: 20px;
  padding-top: 2%;
  padding-left: 3%;
  padding-right: 3%;
  text-align: center;
}

/* STYLING FOR THE FOOTER */

footer {
  font-family: 'Passion One', cursive ;
  background-color: #f0f0f0;
  padding-top: 10px;
  text-align: center;
  float: bottom;
  opacity: 0.8;
}

.social-icons {
  margin-bottom: 10px;
}

.social-icon {
  font-size: 24px;
  color: #333;
  margin: 0 10px;
  transition: color 0.3s ease;
}

.social-icon:hover {
  color: #007bff; /* Change color on hover */
}

p {
  margin: 0;
}

